Revision history for {{$dist->name}}

{{$NEXT}}

1.03_01   2019-12-11 20:53:40 -0700
  - Restore support for Visual C++ Perl build (gh#202)
  - C++ support on Visual C++ Perl is not supported at this time (gh#203)

1.02      2019-12-09 03:07:41 -0700
  - FFI::Build is no longer described as "alpha"
  - Documentation fixes.

1.01      2019-11-16 07:16:20 -0700
  - Documentation fixes only (gh#198, gh#199, gh#200)

1.00      2019-11-15 13:46:15 -0500
  - Production release identical to 0.99_06

0.99_06   2019-11-12 21:08:23 -0500
  - Detect Rust or Go modules according to Cargo.toml or go.mod files (gh#197)

0.99_05   2019-10-30 19:25:02 -0600
  - Add FFI::Build support for build_all method (gh#195)

0.99_03   2019-10-24 10:46:02 -0700
  - Documentation

0.99_02   2019-10-14 16:16:16 -0600
  - api = 1 is no longer experimental (gh#193)

0.99_01   2019-10-14 14:39:18 -0600
  - Convert documentation from api => 0 (implicit) to api => 1 (explicit)
  - Improved documentation (gh#181, gh#184)

0.98      2019-10-14 13:18:02 -0600
  - Production release identical to 0.97_05

0.97_05   2019-10-12 13:09:12 -0600
  - Fixed several memory leaks on some return types and complex type
    arguments (gh#190, gh#191)

0.97_04   2019-10-05 12:31:32 -0600
  - pointer is no longer an alias for opaque with api => 1 (gh#189)
  - Added several reserved words for the type parser when api => 1 (gh#189)

0.97_03   2019-09-25 18:03:13 -0600
  - FFI::Platypus::Record has a record_layout_1 function which
    uses api => 1 by default. (gh#187)

0.97_02   2019-09-20 04:03:59 -0600
  - FFI::Platypus::Record record_layout may now take FFI::Platypus
    constructor arguments as a array reference as the first argument
    (gh#185)

0.97_01   2019-09-18 20:56:59 -0600
  - Pre-compute cast functions when they are created to save time each time
    they are called (gh#178, #179)
  - sizeof and alignof can now be used as class methods (gh#183)

0.96      2019-08-19 18:33:58 -0400